# ToSMod

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Launch-ToSMod.bat  Launch-ToSMod.ps1  README.md  ROADMAP.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-collectors.txt  requirements-training.txt  requirements.txt  run.ps1
.github/workflows/: ci.yml
config/: README.md  connectors.yaml  defaults.yaml  platforms.yaml  taxonomy.yaml
config/import_profiles/: apify_tiktok_export.yaml  hf_sample.yaml  tosmod_canonical.yaml
config/tos_guide/: _schema.yaml  instagram.yaml  tiktok.yaml  youtube.yaml
dashboard/: README.md  __init__.py  __main__.py  app.py  tosmod_routes.py
dashboard/templates/: index.html
docs/: ANNOTATION.md  DATA_SOURCES.md  DATA_USE.md  IMPORT_MAPPING.md  MODELS.md  PROJECT_CONTEXT.md  README.md  SECRETS.md  ethics.md
examples/data/: demo_comments.csv  demo_posts.json
examples/templates/: import_template.csv
model_cards/: README.md  hatebert-7class-ted.md  roberta-7class-ted.md  toxicbert-7class-ted.md
scripts/: README.md  export_annotations_csv.py  seed_demo_db.py
tests/: test_tosmod.py
thesis_scraper/: README.md  __init__.py  main.py  requirements.txt
thesis_scraper/config/: __init__.py  settings.yaml
thesis_scraper/processors/: __init__.py  anonymizer.py  standardizer.py  timestamp.py
thesis_scraper/storage/: raw.py  (+3 more)
tosmod/: __init__.py  __main__.py  cli.py  import_cli.py  paths.py  seed.py
training/: README.md  __main__.py  finetune.py
(+27 files in other folders)
